Criado componete porta e style

--- a/styles/Presente.module.css
+++ b/styles/Presente.module.css
@@ -2,12 +2,14 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .tampa {
     width: 100px;
     height: 25px;
     background-color: #7AA944;
+  
 }
 
 .corpo {
@@ -18,11 +20,16 @@
 }
 
 .laco1 {
+    position: absolute;
     background-color: red;
     width: 15px;
     height: 85px;
 }
 
 .laco2 {
+    position: absolute;
+    top: 40px;
     background-color: red;
+    width: 90px;
+    height: 15px;
 }
