--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
 
-    width: 200px;
-    height: 310px;
+    width: var(--area-porta-largura);
+    height: var(--area-porta-altura);
     background-color: chocolate;
 }
 
