--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -1,10 +1,22 @@
+.area {
+    display: flex;
+    width: var(--area-porta-largura);
+    height: var(--area-porta-altura);
+}
+
+.estrutura {
+    display: flex;
+    flex-grow: 1;
+    border-left: 5px solid brown;
+    border-top: 5px solid brown;
+    border-right: 5px solid brown;
+}
+
 .porta {
     display: flex;
     flex-direction: column;
-
-    width: var(--area-porta-largura);
-    height: var(--area-porta-altura);
     background-color: chocolate;
+    flex-grow: 1;
 }
 
 .numero {
