--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -2,6 +2,9 @@
     display: flex;
     width: var(--area-porta-largura);
     height: var(--area-porta-altura);
+    flex-direction: column ;
+    align-items: center;
+    margin: 5px;
 }
 
 .estrutura {
@@ -10,6 +13,7 @@
     border-left: 5px solid brown;
     border-top: 5px solid brown;
     border-right: 5px solid brown;
+    width: 90%;
 }
 
 .porta {
@@ -24,6 +28,10 @@
     justify-content: center;
     align-items: center;
     font-size: 100px;
-    
+}
 
+.chao {
+    height: 10px;
+    width: 100%;
+    background-color: #ddd;
 }
