--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -35,3 +35,28 @@
     width: 100%;
     background-color: #ddd;
 }
+
+.macaneta {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: brown;
+    margin-left: 6px;
+}
+
+.selecionada {
+    border-left: 5px solid yellow;
+    border-top: 5px solid yellow;
+    border-right: 5px solid yellow;
+}
+.selecionada .numero {
+    color: yellow;
+}
+
+.selecionada .numero {
+    color: yellow;
+}
+
+.selecionada .macaneta {
+    background-color: yellow;
+}
